...

        <TextView
            android:id="@+id/txt_mem_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Name"
            android:textColor="@color/color_white"
            app:layout_constraintEnd_toEndOf="parent"
...

        <TextView
            android:id="@+id/txtViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/txtViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/txtViewRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <ImageButton
                android:id="@+id/btn_change_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btn_kick_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/mem_stats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/txt_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="Statistics"
                android:textColor="@color/color_white"
                android:textSize="30sp"
...

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_tasks"
                android:layout_width="match_parent"
                android:layout_height="400dp" />
...

            <TextView
                android:id="@+id/txtongoing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Ongoing Tasks"
                android:textColor="@color/color_white"
                app:layout_constraintEnd_toEndOf="parent"
...

            <TextView
                android:id="@+id/txtComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Completed Tasks"
                android:textColor="@color/color_white"
                app:layout_constraintEnd_toEndOf="parent"
...

            <TextView
                android:id="@+id/txtOverdue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Overdue Tasks"
                android:textColor="@color/color_white"
                app:layout_constraintEnd_toEndOf="parent"
...

            <TextView
                android:id="@+id/txtCompletedOverdue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Completed Overdue Tasks"
                android:textColor="@color/color_white"
                android:textSize="20sp"
...

            <TextView
                android:id="@+id/txtDue24Hrs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Tasks Due Within 24hrs"
                android:textColor="@color/color_white"
                app:layout_constraintEnd_toEndOf="parent"
...

        <LinearLayout
            android:id="@+id/mem_mental_health"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/txt_mental_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif"
                android:text="Mental Health"
                android:textColor="@color/color_white"
                android:textSize="30sp"
...

                <ProgressBar
                    android:id="@+id/progressBar_mh"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="200dp"
...

                <TextView
                    android:id="@+id/txt_percentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
            <TextView
                android:id="@+id/txt_overall_standing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/txt_mh_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
